# restate-obstore

./: .dockerignore  .env.dist  Dockerfile  README.md  devenv.nix  justfile  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/: main.py
src/restate_obstore/: __init__.py  bound.py  restate.py  run.py  store.py  unbound.py
