[project]
name = "restate-obstore"
version = "0.0.3"
description = "Durable workflow component for interacting with object stores"
readme = "README.md"
authors = [
    { name = "Mark Sagi-Kazar", email = "mark.sagikazar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "obstore>=0.8.2",
    "pydantic>=2.12.4",
    "restate-sdk[serde]>=0.11.0",
]

[project.optional-dependencies]
app = [
    "granian[pname,reload]>=2.5.7",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "pydantic-obstore",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
pydantic-obstore = { git = "https://github.com/sagikazarmark/pydantic-obstore", rev = "v0.0.2" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
